--- a/src/Usermanagement/user.css
+++ b/src/Usermanagement/user.css
@@ -1,12 +1,11 @@
-.addoffer Form{
+.user Form{
+    margin-left: 250px;
     width: 60%;
-    margin-left: 250px;
     font-weight: bold;
-border-radius: 10px;
 }
-.addoffer button{
+.user Form button {
     margin-left: 250px;
-    margin-top: 10px;
+    margin-top: 20px;
     width: 20%;
     height: 8vh;
     font-weight: bold;
