--- a/src/Shop/shop.css
+++ b/src/Shop/shop.css
@@ -3,3 +3,14 @@
     margin-left: 300px;
     color: black;
 }
+.shopadd button{
+    margin-left: 220px;
+    margin-top: 10px;
+    width: 25%;
+    height: 7vh;
+    font-weight: bold;
+}
+.table-container{
+    /* overflow-x: auto; */
+    
+}
