--- a/src/Offer/offer.css
+++ b/src/Offer/offer.css
@@ -1,13 +1,14 @@
 .addoffer Form{
     width: 60%;
-    margin-left: 250px;
+    margin-left: 350px;
     font-weight: bold;
 border-radius: 10px;
 }
 .addoffer button{
     margin-left: 250px;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     width: 20%;
     height: 8vh;
     font-weight: bold;
+    font-size: medium;
 }
