--- a/src/Product/Category/category.css
+++ b/src/Product/Category/category.css
@@ -1,16 +1,5 @@
 .addcategory Form{
-    width: 50%;
-    margin-left: 350px;
-    color: rgb(17, 16, 16);
-    font-weight: bold;
+    padding: 50px;
+    font: bold;
 }
-h1 {
-    margin-left: 350px;
-}
-.addcategory button{
-    margin-left: 230px;
-    margin-top: 10px;
-    width: 20%;
-    height: 8vh;
-    font-weight: bold;
-}
+
