--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -5,8 +5,13 @@ a {
   padding-left: 20px;
   padding-right: 20px;
 }  
-.container{
-  position: fixed;
-  /* z-index: 2; */
-  width: 100vw;
+.nav .navbar{
+    width: 100vw;
+    height: 10vh;
+    background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
