--- a/src/Sidebar/sidebar1.css
+++ b/src/Sidebar/sidebar1.css
@@ -13,8 +13,8 @@
     padding: 2rem 3rem 0rem 3rem;
     /* text-align: justify; */
     height: 90vh;
-    overflow-y: hidden;
-    overflow-x: hidden;
+    /* overflow-y: hidden;
+    overflow-x: hidden; */
   }
 
   .sidebar{
